Rutas con params y query params

--- a/src/app/detalle-curso/detalle-curso.component.html
+++ b/src/app/detalle-curso/detalle-curso.component.html
@@ -1,1 +1,7 @@
-<p>detalle-curso works!</p>
+<div class="container" *ngIf="curso.id > 0">
+  <h2>{{ curso.id }} {{ curso.nombre }}</h2>
+  <hr>
+  <ul>
+    <li *ngFor="let i of curso.integrantes">{{ i.nombre }} ({{ i.email }})</li>
+  </ul>
+</div>
