--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -12,7 +12,7 @@
         <td>{{ c.id }}</td>
         <td>{{ c.nombre }}</td>
         <td>
-          <a [routerLink]="['/curso', c.id]">
+          <a [routerLink]="['/curso']" [queryParams]="{id: c.id}">
             <i class="fa fa-eye"></i>
           </a>
           <button class="btn btn-success" style="margin-left: 10px">
