--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
 
 <!--<app-menu></app-menu>-->
 
-<app-poke-trello></app-poke-trello>
+<!--<app-poke-trello></app-poke-trello>-->
 
 <!--<app-lista-pokemon></app-lista-pokemon>-->
 
