--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -17,7 +17,7 @@
           <a [routerLink]="['/curso']" [queryParams]="{id: c.id}">
             <i class="fa fa-eye"></i>
           </a>
-          <button class="btn btn-success" style="margin-left: 10px">
+          <button class="btn btn-success" style="margin-left: 10px" (click)="navegar(c.id)">
             <i class="fa fa-eye"></i>
           </button>
         </td>
