Ejemplo con template form

--- a/src/app/formularios/template-forms/template-forms.component.html
+++ b/src/app/formularios/template-forms/template-forms.component.html
@@ -1,1 +1,61 @@
-<p>template-forms works!</p>
+<div class="container">
+  <div class="row">
+    <h3>Template Forms</h3>
+  </div>
+  <div class="row">
+    <form autocomplete="off" (ngSubmit)="guardar(form)" #form="ngForm">
+      <div class="col-12 form-group">
+        <label class="col-2 col-form-label">Nombre</label>
+        <div class="col-10">
+          <input
+            type="text"
+            name="nombre"
+            class="form-control"
+            placeholder="Nombre"
+            required
+            minlength="3"
+            ngModel
+            #nombre="ngModel"
+            [class.is-invalid]="nombre.invalid && nombre.touched"
+          >
+        </div>
+      </div>
+      <div class="col-12 form-group">
+        <label class="col-2 col-form-label">Apellido</label>
+        <div class="col-10">
+          <input
+            type="text"
+            name="apellido"
+            class="form-control"
+            placeholder="Apellido"
+            required
+            minlength="3"
+            ngModel
+            #apellido="ngModel"
+            [class.is-invalid]="apellido.invalid && apellido.touched"
+          >
+        </div>
+      </div>
+      <div class="col-12 form-group">
+        <label class="col-2 col-form-label">Email</label>
+        <div class="col-10">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="Email"
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+            ngModel
+            #email="ngModel"
+            [class.is-invalid]="email.invalid && email.touched"
+          >
+        </div>
+      </div>
+      <div class="col-12" style="margin-top: 20px">
+        <button type="submit" class="btn btn-primary" style="margin-right: 10px">Registrar</button>
+        <button class="btn btn-danger">Limpiar</button>
+      </div>
+    </form>
+  </div>
+</div>
