--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,4 +3,5 @@
   <li><a routerLink="cursos">Cursos</a></li>
   <li><a [routerLink]="'videos'">Vídeos</a></li>
   <li><a [routerLink]="'integrantes'">Integrantes</a></li>
+  <li><a [routerLink]="'template-forms'">Template Forms</a></li>
 </ul>
