--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,4 +4,5 @@
   <li><a [routerLink]="'videos'">Vídeos</a></li>
   <li><a [routerLink]="'integrantes'">Integrantes</a></li>
   <li><a [routerLink]="'template-forms'">Template Forms</a></li>
+  <li><a [routerLink]="'reactive-forms'">Reactive Forms</a></li>
 </ul>
