--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,4 +5,5 @@
   <li><a [routerLink]="'integrantes'">Integrantes</a></li>
   <li><a [routerLink]="'template-forms'">Template Forms</a></li>
   <li><a [routerLink]="'reactive-forms'">Reactive Forms</a></li>
+  <li><a [routerLink]="'modals'">Modals</a></li>
 </ul>
