--- a/src/app/usuarios/formulario/formulario.component.html
+++ b/src/app/usuarios/formulario/formulario.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row header">
-    <h3>Crear usuario</h3>
+    <h3 *ngIf="tipo === 'crear'">Crear usuario</h3>
+    <h3 *ngIf="tipo === 'editar'">Editar usuario</h3>
+    <h3 *ngIf="tipo === 'ver'">Ver usuario</h3>
   </div>
   <div class="row">
     <form autocomplete="off" [formGroup]="form" (ngSubmit)="submit()">
@@ -23,7 +25,9 @@
         </div>
       </div>
       <div class="col-12">
-        <button class="btn btn-primary" type="submit">Crear</button>
+        <button class="btn btn-primary" type="submit" *ngIf="tipo !== 'ver'">
+          {{ tipo === 'editar' ? 'Actualizar' : 'Crear' }}
+        </button>
         <button class="btn btn-danger" type="button" (click)="cerrarModal()">Cerrar</button>
       </div>
     </form>
