--- a/src/app/usuarios/listado/listado.component.html
+++ b/src/app/usuarios/listado/listado.component.html
@@ -23,10 +23,10 @@
           <td>{{ u.apellido }}</td>
           <td>{{ u.email }}</td>
           <td>
-            <button class="btn btn-outline-primary btn-sm">
+            <button class="btn btn-outline-primary btn-sm" (click)="ver(u)">
               <i class="fa fa-eye"></i>
             </button>
-            <button class="btn btn-outline-warning btn-sm" (click)="editar(u)">
+            <button class="btn btn-outline-warning btn-sm" (click)="editar(u, indice)">
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-outline-danger btn-sm" (click)="eliminarUsuario(indice)">
