Implementacion de interceptor, guardias de rutas

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,4 +6,5 @@
   <li><a [routerLink]="'template-forms'">Template Forms</a></li>
   <li><a [routerLink]="'reactive-forms'">Reactive Forms</a></li>
   <li><a [routerLink]="'modals'">Modals</a></li>
+  <li><a [routerLink]="'login'">Login</a></li>
 </ul>
