implementacion de firebase storage

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,4 +7,5 @@
   <li><a [routerLink]="'reactive-forms'">Reactive Forms</a></li>
   <li><a [routerLink]="'modals'">Modals</a></li>
   <li><a [routerLink]="'login'">Login</a></li>
+  <li><a [routerLink]="'storage-firebase'">Archivos Firebase</a></li>
 </ul>
